--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,28 @@
         <version>3.4.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.jodd</groupId>
+        <artifactId>jodd-http</artifactId>
+        <version>3.8.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jodd</groupId>
+        <artifactId>jodd-props</artifactId>
+        <version>3.8.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jodd</groupId>
+        <artifactId>jodd-core</artifactId>
+        <version>3.8.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+    <dependency>
+        <groupId>net.sf.json-lib</groupId>
+        <artifactId>json-lib</artifactId>
+        <version>2.4</version>
+    </dependency>
+
 
 </dependencies>
     <build>
