--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,17 @@
         <artifactId>json-lib</artifactId>
         <version>2.4</version>
     </dependency>
-
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.54</version>
+    </dependency>
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>RELEASE</version>
+        <scope>compile</scope>
+    </dependency>
 
 </dependencies>
     <build>
